greatly simplified the Rakefile

--- a/README
+++ b/README
@@ -1,8 +1,14 @@
 This vim configuration uses pathogen and git submodules
 
-The install requires ruby 1.9.2 and git be installed
+First you need to clone this repository into .vim
+    git clone https://github.com/toranb/vimfiles ~/.vim
 
-1). Clone this repository into .vim
-  git clone https://github.com/toranb/vimfiles ~/.vim
-2). cd into the .vim directory and run rake
-  cd ~/.vim && rake
+If you have ruby installed you can run rake to update/symlink
+    cd ~/.vim && rake
+
+If you prefer to do it manually ...
+    cd ~/.vim
+    git submodule update --init
+    cd ../
+    ln -s .vimrc ~/.vim/vimrc
+    ln -s .gvimrc ~/.vim/gvimrc
